--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -24,7 +24,8 @@
         android:layout_alignLeft="@+id/password"
         android:layout_alignRight="@+id/password"
         android:text="Login"
-        android:background="#ffffffff" />
+        android:background="#ffffffff"
+        android:layout_marginBottom="10dp" />
 
     <EditText
         android:id="@+id/password"
@@ -33,57 +34,46 @@
         android:layout_above="@+id/login"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="textPassword">
+        android:inputType="textPassword"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp">
 
         <requestFocus />
     </EditText>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
-        android:gravity="center"
-        android:text="CherUp!"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold" />
 
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView2"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/logocheerup" />
+        android:src="@drawable/logo" />
 
 
     <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/password"
-        android:layout_alignLeft="@+id/password"
-        android:layout_marginLeft="22dp"
-        android:text="Password" />
+        android:text="Password"
+        android:layout_alignBottom="@+id/password"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignStart="@+id/textView1" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/TextView01"
+        android:ems="10"
+        android:layout_above="@+id/password"
         android:layout_centerHorizontal="true"
-        android:ems="10" />
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/TextView01"
-        android:layout_centerVertical="true"
-        android:layout_below="@id/imageView1"
-        android:text="Username" />
+        android:text="Username"
+        android:layout_alignBottom="@+id/username"
+        android:layout_toLeftOf="@+id/username"
+        android:layout_toStartOf="@+id/username" />
 
 </RelativeLayout>
