--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -2,72 +2,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF3C85FF">
+    android:background="#ffffffff">
 
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/password"
-        android:layout_below="@id/imageView1"
-        android:layout_centerVertical="true"
-        android:text="Username" />
 
     <EditText
         android:id="@+id/username"
+        android:clickable="true"
+        android:hint="Nom d'utilisateur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/TextView01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/username"
-        android:layout_below="@+id/username"
-        android:text="Password" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="CheerUp!"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView2"
+        android:ems="10"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/logo" />
+        android:layout_marginTop="20dp" />
 
 
     <EditText
         android:id="@+id/password"
+        android:clickable="true"
+        android:hint="Mot de passe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/TextView01"
-        android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:layout_below="@+id/username"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/password"
+        android:text="ENREGISTRER"
         android:layout_below="@+id/password"
-        android:text="Register"
-        android:background="#ffffffff" />
+        android:layout_centerHorizontal="true"
+        android:background="#FF3C85FF"
+        android:layout_alignLeft="@+id/password"
+        android:layout_alignRight="@+id/password"
+        android:layout_marginTop="20dp" />
+
+    <ImageView
+        android:layout_width="328dp"
+        android:layout_height="294dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logocu"
+        android:layout_marginTop="30dp" />
 
 </RelativeLayout>
